# evkmimxrt1064_lpuart_interrupt

.mcuxpressoide_packages_support/: crt_directory.xml  info.properties
.mcuxpressoide_packages_support/MIMXRT1064xxxxA_support/: info.properties
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
armgcc/: CMakeLists.txt  CMakePresets.json  evkmimxrt1064_lpuart_interrupt_Debug.ld  flags.cmake  mcux_include.json
armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  evkmimxrt1064_lpuart_interrupt.elf  evkmimxrt1064_lpuart_interrupt_Debug_library.ld  evkmimxrt1064_lpuart_interrupt_Debug_memory.ld  output.map
armgcc/debug/.cmake/api/v1/reply/: cache-v2-4ebab94f705e8537f079.json  cmakeFiles-v1-563435483b6f0eb18b66.json  codemodel-v2-7540cb26ad9a7154654c.json  index-2024-07-29T14-29-11-0373.json  target-evkmimxrt1064_lpuart_interrupt.elf-debug-a2c85f599fd024ed3049.json  toolchains-v1-bae9c7180a3b49015a3d.json
source/: lpuart_interrupt.c
